<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/facebook_background_color"
    android:orientation="vertical"> <!-- added orientation attribute -->

    <ImageView
        android:id="@+id/facebook_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"

        android:src="@drawable/ic_facebook" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:textColorHint="@color/facebook_text_color" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:textColorHint="@color/facebook_text_color" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/login_button_text"
        android:background="@color/facebook_blue_color"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password_text"
        android:textColor="@color/facebook_text_color"
        android:textSize="14sp" />

<!--    Tao khoang trong-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
    </LinearLayout>

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/create_account_button_text"
            android:background="@color/facebook_button_background_color"
            android:textColor="@color/facebook_text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/meta_text"
            android:textColor="@color/facebook_text_color"
            android:textSize="20sp" />



</LinearLayout>