<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/facebook_background_color"
    android:orientation="vertical"> <!-- added orientation attribute -->
    <Button
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textColor="@color/facebook_text_color"
        android:textSize="50sp" />
    <ImageView
        android:id="@+id/facebook_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_facebook" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:background="@drawable/shape_"
        android:textColorHint="@color/facebook_text_color"

        />
    <EditText
        android:id="@+id/sdt_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/sdt_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:textColorHint="@color/facebook_text_color" />
    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:textColorHint="@color/facebook_text_color" />
    <EditText
        android:id="@+id/re_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/re_password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:textColorHint="@color/facebook_text_color" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/register_button_text"
        android:background="@color/facebook_blue_color"
        android:textColor="@color/white" />

</LinearLayout>